# wholth

./: .clang-format  .gitignore  .uncrustify  CMakeLists.txt  LICENSE  Makefile  README  README.md  Session.vim  cmake_targets  compile_commands.json  todo.md  toolchain_clang.cmake  toolchain_gnu.cmake
include/: serialization.hpp
include/db/: db.hpp
include/ui/: glfw_window.hpp  imgui.hpp  platform.hpp  style.hpp  window.hpp
include/ui/components/: food_edit_modal.hpp  food_list.hpp  foods_page.hpp  search_bap.hpp  timer.hpp
include/ui/internal/: glfw_imgui.hpp  glfw_platform.hpp  glfw_window.hpp  imgui.hpp  platform.hpp  window.hpp
include/utils/: convert.hpp  datetime.hpp  imgui.hpp  json_serializer.hpp  serializer.hpp  time_to_seconds.hpp  timer.hpp
include/vk/: descriptor_pool.hpp  device.hpp  instance.hpp  physical_device.hpp  render_pass.hpp  surface.hpp  swapchain.hpp  vk.hpp
include/wholth/: app.hpp  app_c.h  buffer_view.hpp  cmake_vars.h  cmake_vars.h.in  concepts.hpp  context.hpp  error.hpp  hello_triangle.h  hydrate.hpp  hydrate_describable.hpp  hydrate_ingredient.hpp  hydrate_recipe_step.hpp  list.hpp  page.hpp  pager.hpp  pagination.hpp  scheduler.hpp  serialization_definitions.hpp  status.hpp  swappable.hpp  task_list.hpp  task_queue.hpp  utils.hpp  view_list.hpp  wholth.h
include/wholth/c/: app.h  array.h  buffer.h  error.h  exec_stmt.h  food_details.h  forward.h  internal.hpp  string_view.h
include/wholth/c/entity/: consumption_log.h  food.h  ingredient.h  (+5 more)
include/wholth/controller/: abstract_page.hpp  expanded_food.hpp  foods_page.hpp
include/wholth/entity/: food.hpp  ingredient.hpp  length_container.hpp  locale.hpp  nutrient.hpp  recipe_step.hpp  utils.hpp
include/wholth/entity_manager/: consumption_log.hpp  food.hpp  ingredient.hpp  nutrient.hpp  recipe_step.hpp  user.hpp
include/wholth/internal/: ring_pool.hpp
include/wholth/list/: food.hpp  nutrient.hpp
include/wholth/model/: abstract_page.hpp  expanded_food.hpp  foods_page.hpp  recipe_step.hpp
include/wholth/pages/: code.hpp  consumption_log.hpp  container.hpp  food.hpp  food_nutrient.hpp  ingredient.hpp  internal.hpp  nutrient.hpp  object.hpp  query.hpp  recipe_step.hpp  utils.hpp
include/wholth/utils/: convert.hpp  is_valid_id.hpp  length_container.hpp  prepend_sql_params.hpp  str_replace.hpp  str_split.hpp  to_error.hpp  to_string_view.hpp
migrations/: 0.sql  00001-locale.sql  00002-food.sql  00003-food_localisation.sql  00004-nutrient.sql  00005-nutrient_localisation.sql  00006-food_nutrient.sql  00008-cooking_action_localisation.sql  00009-recipe_step.sql  00010-recipe_step_localisation.sql  00011-recipe_step_food.sql  00012-insert-locale.sql  00013-insert-nutrient.sql  00014-insert-nutrient_localisation-en.sql  00015-insert-nutrient_localisation-ru.sql  00016-insert-food.sql  00017-insert-food_localisation-en.sql  00018-insert-food_localisation-ru.sql  00019-insert-food_nutrient-p1.sql  00019-insert-food_nutrient-p2.sql  00019-insert-food_nutrient-p3.sql  00019-insert-food_nutrient-p4.sql  00019-insert-food_nutrient-p5.sql  00019-insert-food_nutrient-p6.sql  00019-insert-food_nutrient-p7.sql  00020-error.sql  00021-insert-error.sql  00022-error_localisation.sql  00023-insert-error_localisation-en.sql  00023-insert-error_localisation-ru.sql  00024-view-recipe_info.sql  00025-view-recipe_tree_node.sql  00026-consumption_log.sql  00026-user.sql  00027-consumption_log.sql  00028-app_info.sql  00029-insert-app_info-defalut_locale.sql  00030-alter-recipe_step.sql  00031-delete-food-nutrient-1008.sql  00032-recipe_step_unique_recipe_id.sql  (+23 more)
sql_statements/: body_part_insert.sql  body_part_select.sql  body_part_update_text.sql  consumption_log_delete.sql  consumption_log_update.sql  exercise_body_part_delete_for.sql  exercise_body_part_insert.sql  exercise_insert.sql  exercise_log_delete.sql  exercise_log_insert.sql  exercise_log_select.sql  exercise_log_update.sql  exercise_select.sql  exercise_type_select.sql  exercise_update.sql  ingredient_delete.sql  nutrient_top_select.sql  recipe_step_upsert.sql
src/: hello_triangle.cpp  install.cpp  main.cpp  main_2.cpp  main_4.cpp  utils.cpp
src/controller/: insert_recipe_step.cpp  recipe_step.cpp  update_food.cpp
src/db/: db.cpp
src/entity/: food.cpp
src/list/: food.cpp  food_details.cpp  food_ingredients.cpp  nutrient.cpp
src/ui/: glfw_platform.cpp  glfw_window.cpp  imgui.cpp
src/ui/components/: food_edit_modal.cpp  food_list.cpp  foods_page.cpp
src/utils/: datetime.cpp  is_valid_id.cpp  json_serializer.cpp  time_to_seconds.cpp
src/vk/: descriptor_pool.cpp  device.cpp  instance.cpp  physical_device.cpp  render_pass.cpp  swapchain.cpp  vk.cpp
src/wholth/: app.cpp  app_c.cpp  context.cpp  error.cpp  page.cpp  pagination.cpp  scheduler.cpp  status.cpp
src/wholth/c/: app.cpp  buffer.cpp  exec_stmt.cpp  food_details.cpp  food_indredients.cpp  food_nutreints.cpp  food_nutreints.cppbck  ingredients.cpp  internal.cpp  recipe_step.cpp  string_view.cpp
src/wholth/controller/: expanded_food.cpp  foods_page.cpp
src/wholth/entity_manager/: ingredient.cpp  nutrient.cpp  recipe_step.cpp
src/wholth/pages/: food.cpp  internal.cpp
src/wholth/utils/: length_container.cpp  prepend_sql_params.cpp  str_replace.cpp  str_split.cpp  to_error.cpp
tasks/: test_consumption_log.md  transfer_to_exec_stmt.md
tests/: assert.hpp  exec_stmt_helpers.hpp  food.cpp  helpers.cpp  helpers.hpp  nutrient.cpp
tests/controller/: ingredients.cpp  insert_recipe_step.cpp  update_food.cpp
tests/db/: db.cpp
tests/db/mock_erroneous_migrations/: 001-a.sql  001-b.sql
tests/db/mock_migrations/: 001-b.sql  002-a.sql
tests/list/: food.cpp  nutrient.cpp
tests/utils/: convert.cpp  datetime.cpp  time_to_seconds.cpp
tests/wholth/c/: exec_stmt.cpp
tests/wholth/sql_statements/: body_part_insert.cpp  body_part_update_text.cpp  exercise_body_part_insert.cpp  exercise_insert.cpp  exercise_log_delete.cpp  exercise_log_insert.cpp  exercise_log_update.cpp  exercise_update.cpp  ingredient_delete.cpp  nutrient_top_select.cpp  recipe_step_upsert.cpp
(+55 files in other folders)
